--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -133,3 +133,17 @@ footer {
     line-height: 1.6;
     margin-bottom: 15px;
 }
+
+
+
+@media screen and (max-width: 1280px) {
+    .container {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .container {
+        width: 98%;
+    }
+}
