--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         <h1>Обо мне</h1>
         <div class="about-content">
             <div class="text-container">
-                <p>Привет! Я разработчик с опытом в Python, JavaScript, С и SQL. Моя страсть к кодированию вдохновляет меня на поиск новых решений и возможностей. Мое вдохновение – создание уникальных проектов. Тут вы можете ознакомиться с некоторыми из моих проектов.</p>
+                <p>Привет! Я разработчик с опытом в Python, JavaScript и SQL. Моя страсть к кодированию вдохновляет меня на поиск новых решений и возможностей. Мое вдохновение – создание уникальных проектов. Тут вы можете ознакомиться с некоторыми из моих проектов.</p>
                 <p>Давайте вместе создадим что-то удивительное!</p>
                 <div class="icons">
                     <a class='link' href="https://t.me/Vombit" target="_blank"><img class="icon animation_compressing" src="static\images\icons\telegram.svg" alt="telegram"></a>
@@ -39,7 +39,7 @@
                                 <img class="icon" src="static\images\icons\{{ icon }}.svg" title="{{ icon }}">
                             {% endfor %}
                             <a class="link animation_compressing" href="{{ project['github_link'] }}" alt="Посетить Github" target="_blank"><img class="icon" src="static\images\icons\github.svg"></a>
-                            <img class="icon animation_compressing" src="static\images\icons\more.svg" title="Больше">
+                            <!--<img class="icon animation_compressing" src="static\images\icons\more.svg" title="Больше">-->
                         </div>
                     </div>
                 </div>
