--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -134,7 +134,26 @@ footer {
     margin-bottom: 15px;
 }
 
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.6);
+}
 
+.popup-content {
+    border-radius: 8px;
+    background-color: #242424;
+    margin: 15% auto;
+    padding: 20px;
+    width: 40%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 @media screen and (max-width: 1280px) {
     .container {
