modified:   static/css/styles.css 	modified:   templates/index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         <h1>Обо мне</h1>
         <div class="about-content">
             <div class="text-container">
-                <p>Привет! Я разработчик с опытом в Python, JavaScript и SQL. Моя страсть к кодированию вдохновляет меня на поиск новых решений и возможностей. Мое вдохновение – создание уникальных проектов. Тут вы можете ознакомиться с некоторыми из моих проектов.</p>
+                <p>Привет! Я разработчик с опытом в Python, JavaScript и SQL. Моя страсть к кодированию вдохновляет меня на поиск новых решений и возможностей. Мое вдохновение – создание уникальных проектов. Тут вы можете ознакомиться с некоторыми из моих проектов. (Не забудте нажать на "...", чтоб узнать больше о проекте)</p>
                 <p>Давайте вместе создадим что-то удивительное!</p>
                 <div class="icons">
                     <a class='link' href="https://t.me/Vombit" target="_blank"><img class="icon animation_compressing" src="static\images\icons\telegram.svg" alt="telegram"></a>
