--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -142,17 +142,57 @@ footer {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     background-color: rgba(0, 0, 0, 0.6);
 }
 
 .popup-content {
     border-radius: 8px;
     background-color: #242424;
-    margin: 15% auto;
-    padding: 30px;
-    width: 40%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin: 10% auto;
+    padding: 40px;
+    max-width: 40%;
+    box-sizing: border-box;
+    overflow-y: auto;
+    position: relative;
+}
+
+.popup-content img {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+}
+
+.popup-content h2 {
+    position: absolute;
+    top: 10px;
+    left: 40px;
+}
+
+.popup-content h3 {
+    margin-bottom: 10px;
+}
+
+#popup-dependencies {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
+
+#popup-description {
+    margin-top: 40px;
+}
+
+a {
+    text-decoration: none;
+    color: #cc333b;
+    transition: color 0.3s ease;
+    font-weight: bold;
+}
+
+a:hover {
+    color: #ff6600;
 }
 
 @media screen and (max-width: 1280px) {
