--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
             <ul id="popup-dependencies"></ul>
         </div>
     </div>
-    <footer>Copyright © Vombit 2023</footer>
+    <footer>Copyright © Vombit 2023-2024</footer>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 </body>
 </html>
