new file:   static/images/icons/hf-logo-pirate.svg

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
                 <div class="icons">
                     <a class='link' href="https://t.me/Vombit" target="_blank"><img class="icon animation_compressing" src="static\images\icons\telegram.svg" alt="telegram"></a>
                     <a class='link' href="https://github.com/Vombit" target="_blank"><img class="icon animation_compressing" src="static\images\icons\github.svg" alt="Github"></a>
+                    <a class='link' href="https://huggingface.co/Vombit" target="_blank"><img class="icon animation_compressing" src="static\images\icons\hf-logo-pirate.svg" alt="HuggingFace"></a>
                     <a class='link' href="mailto:vombit@proton.me" target="_blank"><img class="icon animation_compressing" src="static\images\icons\email.svg" alt="Email"></a>
                 </div>
             </div>
